# ctr-base

./: .gitmodules  CMakeLists.txt  README.md
python/: generate_matrices.py  parser_wrapper.py  plot_algorithm_eval.py  plot_algorithm_eval_scale.py  plot_link_paths.py  plot_stability_eval.py  plot_stability_eval_dependent.py  selenium_trace.py  stability_eval_runner.py
rst/: single_tm_template.rst  single_top_template.rst  summary_template.rst  tm_stat_template.rst  top_level_template.rst
src/: common.cc  common.h  common_test.cc  controller.cc  controller.h  demand_matrix_input.cc  demand_matrix_input.h  dump_aggregate_cost.cc  flow_counter.cc  flow_counter.h  flow_track.cc  flow_track.h  flow_track_main.cc  headroom_delay_util.cc  ladder_tcp_util.cc  llpd_grow.cc  meshy_util.cc  net_instrument.cc  net_instrument.h  net_mock.cc  net_mock.h  net_mock_util.cc  opt_eval.cc  opt_eval.h  opt_eval_util.cc  pcap_data.cc  pcap_data.h  pcap_data.proto  pcap_data.proto~  pcap_data_util.cc  plot_algorithm_eval.cc  plot_algorithm_eval_tools.cc  plot_algorithm_eval_tools.h  plot_completion_time_delta.cc  plot_difference.cc  plot_headroom_delay.cc  plot_link_utilizations.cc  plot_net_mock_link_utilization.cc  plot_pcap_data.cc  plot_queue_size_dist.cc  (+17 more)
src/geo/: geo.cc  geo.h  geo_main.cc  geo_test.cc
src/info/: deep_storage.cc  deep_storage.h  deep_storage.proto  deep_storage_test.cc  generate_info.cc  info.cc  info.h  info.proto  info.proto~  info_server.cc  info_server.h  processing_pool.cc  processing_pool.h  processing_pool_test.cc  run_info_server.cc  tm_gen.cc  tm_gen.h
src/mean_est/: mean_est.cc  mean_est.h  mean_est_eval.cc
src/metrics/: metrics.cc  metrics.h  metrics.proto  metrics_explore.cc  metrics_parser.cc  metrics_parser.h  metrics_parser_test.cc  metrics_test.cc  metrics_test_util.cc  metrics_test_util.h
src/opt/: ctr.cc  ctr.h  opt.cc  opt.h  opt_compare.cc  opt_compare.h  opt_test.cc  oversubscription_model.cc  oversubscription_model.h  oversubscription_model_test.cc  path_provider.cc  path_provider.h  stability_eval.cc  stability_eval_dependent.cc
src/prob_model/: dist_model.cc  dist_model.h  dist_model_test.cc  multi_rate_eval.cc  multi_rate_queue.cc  multi_rate_queue.h
src/sfml/: manual_network.cc  manual_network.h  sfml.cc  sfml.h  sfml_main.cc
